Upgrade shared modules to Java 21